# Ocean-Simulation-OpenGL

./: README.md
Forgotten_Waves/: CMakeLists.txt
Forgotten_Waves/src/: Builder.cpp  Camera.h  Irradiance.cpp  Parser.h  Renderer.h  Skybox.h
Ocean-Simulation/Ocean_Simulation/src/: Boat.h  Diary.h  Includes.h  Irradiance.h  Ocean.h  Parser.cpp
Ocean_Simulation/: CMakeLists.txt
Ocean_Simulation/assets/Boat/: boat2.mtl
Ocean_Simulation/src/: Boat.cpp  Boat.h  Builder.cpp  Camera.cpp  Camera.h  Diary.cpp  Includes.h  Irradiance.h  Light.cpp  Light.h  Ocean.cpp  Ocean.h  Parser.cpp  Parser.h  Renderer.cpp  Renderer.h  Shader.cpp  Skybox.cpp  Waves.cpp  Waves.h
